--- a/Vores hjem/index.html
+++ b/Vores hjem/index.html
@@ -9,13 +9,13 @@
 <body>
 
     <nav id="main-nav">
-        <div class="logo" data-link="/">Vores Hjem</div>
+        <div class="logo" data-link="./">Vores Hjem</div>
         <ul class="nav-links">
-            <li data-link="/">Dashboard</li>
-            <li data-link="/opskrifter">Opskrifter</li>
-            <li data-link="/lager">Lager</li>
-            <li data-link="/projekter">Projekter</li>
-            <li data-link="/budget">Budget</li>
+            <li data-link="./">Dashboard</li>
+            <li data-link="opskrifter">Opskrifter</li>
+            <li data-link="lager">Lager</li>
+            <li data-link="projekter">Projekter</li>
+            <li data-link="budget">Budget</li>
         </ul>
     </nav>
 
