--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Navigation -->
     <nav id="main-nav">
         <div class="logo" data-link="dashboard">Vores Hjem</div>
         <ul class="nav-links">
@@ -19,13 +17,7 @@
             <li data-link="lager">Lager</li>
         </ul>
     </nav>
-
-    <!-- Hovedcontainer -->
-    <main id="app">
-        <div id="loader">Henter dit hjem...</div>
-    </main>
-
-    <!-- Firebase SDK Moduler -->
+    <main id="app"><div id="loader">Henter dit hjem...</div></main>
     <script type="importmap">
         {
           "imports": {
@@ -35,7 +27,6 @@
           }
         }
     </script>
-
     <script type="module" src="js/app.js"></script>
 </body>
 </html>
